--- a/portugues/index.html
+++ b/portugues/index.html
@@ -129,16 +129,101 @@
       <!-- Projects Section -->
       <section id="android-projects" class="projects-section bg-light">
         <div class="container">
+           <div>
+              <h1 class="text mb-4" text>Projetos Android</h2>
+        </div>
+        <br/>
+        <br/>
+
 
           <!-- Featured Project Row -->
           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-            <div class="col-xl-8 col-lg-7">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/bg-masthead.jpg" alt="">
+
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/02.png" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/03.png" hspace="20"  width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
-                <h4>Shoreline</h4>
-                <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                <h4>Webmotors - Anúnciar Carros (Novo Aplicativo)</h4>
+                <p class="text-black-50 mb-0">Novo desenvolvimento do aplicativo da Webmotors, recriando toda sua interface e funcionalidades, atualizando código, repositórios e seguindo a nova cara da empresa. Feito pensando em toda a experiencia de compra e venda do usuário</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/02.webp" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/03.webp" hspace="20"  width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>MyGatherer </h4>MyGatherer é uma interface multi-ferramentas para o jogo Magic the Gathering®. O app conta com uma base de dados das cartas do jogo, onde pode ser feita uma busca através de palavras soltas ou filtros. Também contará com contadores de vida, lançadores de Dados e Moedas,para que os jogadores utilizem durante as partidas, além de funcionalidades de criações de listas.</p>
+              </div>
+            </div>
+          </div>
+
+                    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/02.webp" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/03.webp" hspace="20"  width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>O Cara</h4>
+                <p class="text-black-50 mb-0">Aplicação de comunicação e Informes internos do portal O Cara.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.png" hspace="20"  width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>JBS - Coaching Mobile</h4>
+                <p class="text-black-50 mb-0">Construção e manutenção da aplicação de Coaching e Treinamento para os funcionários da JBS. Aplicativo usado internamente e baixado via sistema próprio.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/02.webp" hspace="20"  width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Eventos Tim</h4>
+                <p class="text-black-50 mb-0">Desenvolvido para acompanhar a força de venda da TIM nos melhores eventos. Receba de forma personalizada todas as notícias, imagens e vídeos dos eventos TIM. Aproveite e compartilhe suas impressões e experiências com outros participantes.</p>
+              </div>
+            </div>
+          </div>
+            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/02.png" hspace="20"  width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Plataforma Comercial BRF</h4>
+                <p class="text-black-50 mb-0">Aplicação de Avaliação Interna para a empresa BRF, onde os gerentes e supervisores avaliam seus vendedores. Aplicativo usado internamente e baixado via sistema próprio.</p>
+              </div>
+            </div>
+          </div>
+           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ambev/01.png" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Bammp - Ambev</h4>
+                <p class="text-black-50 mb-0">Manutenção na aplicação de Pesquisa de mercado e treinamento Bammp, criando novas funcionalidades e fazendo alterações conforme solicitação do cliente. Aplicativo usado internamente e baixado via sistema próprio.</p>
               </div>
             </div>
           </div>
