--- a/portugues/index.html
+++ b/portugues/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link js-scroll-trigger" href="#tecnologies">Tecnologias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#android-projects">Projectos Android</a>
+                <a class="nav-link js-scroll-trigger" href="#android-projects">Projecto Android</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
@@ -141,8 +141,8 @@
 
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/01.png" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/02.png" hspace="20"  width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/03.png" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/02.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/03.png" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
@@ -155,8 +155,8 @@
           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/01.webp" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/02.webp" hspace="20"  width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/03.webp" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/02.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/03.webp" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
@@ -168,8 +168,8 @@
                     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/01.webp" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/02.webp" hspace="20"  width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/03.webp" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/02.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/03.webp" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
@@ -182,7 +182,7 @@
           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/01.png" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.png" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.png" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
@@ -195,7 +195,7 @@
           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/01.webp" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/02.webp" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/02.webp" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
@@ -207,7 +207,7 @@
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
               <div class="col-lg-8 mx-auto">
               <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/01.png" width="200px" alt="">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/02.png" hspace="20"  width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/02.png" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
