English Projects / Fixing Text Portuguese

--- a/ingles/index.html
+++ b/ingles/index.html
@@ -126,19 +126,104 @@
         </div>
       </section>
 
-      <!-- Projects Section -->
+  <!-- Projects Section -->
       <section id="android-projects" class="projects-section bg-light">
         <div class="container">
+           <div>
+              <h1 class="text mb-4" text>Android Projects</h2>
+        </div>
+        <br/>
+        <br/>
+
 
           <!-- Featured Project Row -->
           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-            <div class="col-xl-8 col-lg-7">
-              <img class="img-fluid mb-3 mb-lg-0" src="../img/bg-masthead.jpg" alt="">
+
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/02.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/webmotors/03.png" width="200px" alt="">
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
-                <h4>Shoreline</h4>
-                <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                <h4>Webmotors - Anúnciar Carros (New App)</h4>
+                <p class="text-black-50 mb-0">New development of Webmotors mobile application, recreating all its interface and functionalities, updating code, repositories and following the new face of the company. Made with all the user's buying and selling experience in mind.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/02.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/mygatherer/03.webp" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>MyGatherer </h4>MyGatherer is a multi-tool interface for the Magic the Gathering® game. The app has a database of game cards, where you can search through words or filters. It also has life counters, Data Launchers and Coins, for players to use during matches, as well as list creation features.</p>
+              </div>
+            </div>
+          </div>
+
+                    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/02.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ocara/03.webp" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>O Cara</h4>
+                <p class="text-black-50 mb-0">Mobile Application of communication and internal reports of the portal O Cara.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.png" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>JBS - Coaching Mobile</h4>
+                <p class="text-black-50 mb-0">Construction and maintenance of the Coaching and Training application for JBS employees. Application used internally and downloaded via own system.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/01.webp" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/timeventos/02.webp" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Eventos Tim</h4>
+                <p class="text-black-50 mb-0">Developed to accompany the sales force of TIM in the best events. Receive personalized news, pictures and videos of TIM events. Enjoy and share your impressions and experiences with other participants.</p>
+              </div>
+            </div>
+          </div>
+            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/01.png" width="200px" alt="">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/brf/02.png" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Plataforma Comercial BRF</h4>
+                <p class="text-black-50 mb-0">Application of Internal Evaluation to the BRF company, where managers and supervisors evaluate their salespeople. Application used internally and downloaded via own system.</p>
+              </div>
+            </div>
+          </div>
+           <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+              <div class="col-lg-8 mx-auto">
+              <img class="img-fluid mb-3 mb-lg-0" src="../img/ambev/01.png" width="200px" alt="">
+            </div>
+            <div class="col-xl-4 col-lg-5">
+              <div class="featured-text text-center text-lg-left">
+                <h4>Bammp - Ambev</h4>
+                <p class="text-black-50 mb-0">Maintenance in the Market Research and Bammp training application, creating new functionalities and making changes as requested by the client. Application used internally and downloaded via own system.</p>
               </div>
             </div>
           </div>
