--- a/portugues/index.html
+++ b/portugues/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link js-scroll-trigger" href="#tecnologies">Tecnologias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#android-projects">Projecto Android</a>
+                <a class="nav-link js-scroll-trigger" href="#android-projects">Projetos Android</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
@@ -147,7 +147,7 @@
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
                 <h4>Webmotors - Anúnciar Carros (Novo Aplicativo)</h4>
-                <p class="text-black-50 mb-0">Novo desenvolvimento do aplicativo da Webmotors, recriando toda sua interface e funcionalidades, atualizando código, repositórios e seguindo a nova cara da empresa. Feito pensando em toda a experiencia de compra e venda do usuário</p>
+                <p class="text-black-50 mb-0">Novo desenvolvimento do aplicativo da Webmotors, recriando toda sua interface e funcionalidades, atualizando código, repositórios e seguindo a nova cara da empresa. Feito pensando em toda a experiencia de compra e venda do usuário.</p>
               </div>
             </div>
           </div>
@@ -160,7 +160,7 @@
             </div>
             <div class="col-xl-4 col-lg-5">
               <div class="featured-text text-center text-lg-left">
-                <h4>MyGatherer </h4>MyGatherer é uma interface multi-ferramentas para o jogo Magic the Gathering®. O app conta com uma base de dados das cartas do jogo, onde pode ser feita uma busca através de palavras soltas ou filtros. Também contará com contadores de vida, lançadores de Dados e Moedas,para que os jogadores utilizem durante as partidas, além de funcionalidades de criações de listas.</p>
+                <h4>MyGatherer </h4>MyGatherer é uma interface multi-ferramentas para o jogo Magic the Gathering®. O app conta com uma base de dados das cartas do jogo, onde pode ser feita uma busca através de palavras soltas ou filtros. Também conta com contadores de vida, lançadores de Dados e Moedas,para que os jogadores utilizem durante as partidas, além de funcionalidades de criações de listas.</p>
               </div>
             </div>
           </div>
