--- a/portugues/index.html
+++ b/portugues/index.html
@@ -191,8 +191,8 @@
                 </div>
               </div>
                 <div class="col-lg-8 mx-auto" align="center">
-                <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/01.png" width="200px" alt="">
-                <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.png" width="200px" alt="">
+                <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/01.PNG" width="200px" alt="">
+                <img class="img-fluid mb-3 mb-lg-0" src="../img/pic/02.PNG" width="200px" alt="">
               </div>
 
             </div>
