--- a/ingles/index.html
+++ b/ingles/index.html
@@ -77,7 +77,7 @@
                       <br/>
                       <br/>
                       <h2 class="text-white mb-4">Android Experience</h2>
-                      <p class="text-white-50" >Android Developer with experience in developing native applications for Trade Marketing, Geolocation, Incentive Campaigns, Ads and Sales. Knowledge of standards of Android development and tools. Experience with Java and Kotlin development. Graduated in Information Systems by <a href="http://www.riobrancofac.edu.br" target="_blank">Faculdades Integradas Rio Branco</a> an Android Mobile Development Certificate by  <a href="https://www.caelum.com.br/" target="_blank">Caelum.</a></p>
+                      <p class="text-white-50" >Android Developer with experience in developing native applications for Banks, Trade Marketing, Geolocation, Incentive Campaigns, Ads and Sales. Knowledge of standards of Android development and tools. Experience with Java and Kotlin development. Graduated in Information Systems by <a href="http://www.riobrancofac.edu.br" target="_blank">Faculdades Integradas Rio Branco</a> an Android Mobile Development Certificate by  <a href="https://www.caelum.com.br/" target="_blank">Caelum.</a></p>
                     </div>
                       <div class="col-lg-8 mx-auto">
                       <h2 class="text-white mb-4">Game Development Knowlege</h2>
@@ -137,6 +137,28 @@
 
 
                   <!-- Featured Project Row -->
+
+
+                <div class="row align-items-left no-gutters mb-4 mb-lg-5">
+
+                  <div class="col-xl-4 col-lg-5" >
+                    <div class="featured-text text text-lg" >
+                      <h4>Bmg Empresas: Conta Digital para o seu negócio</h4>
+                      <p class="text-black-50 mb-0" align="justify"></p>
+                    </div>
+                  </div>
+                </div>
+
+                  <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+
+                    <div class="col-xl-4 col-lg-5">
+                      <div class="featured-text text text-lg" >
+                          <h4>Win the Market - Heineken México</h4>
+                          <p class="text-black-50 mb-0" align="justify"></p>
+                        </div>
+                      </div>
+                  </div>
+
                   <div class="row align-items-center no-gutters mb-4 mb-lg-5">
 
                     <div class="col-xl-4 col-lg-5">
