--- a/portugues/index.html
+++ b/portugues/index.html
@@ -77,7 +77,7 @@
                 <br/>
                 <br/>
                 <h2 class="text-white mb-4">Experiência em Android</h2>
-                <p class="text-white-50" >Desenvolvedor Android com experiência no desenvolvimento de aplicativos nativos para Trade Marketing, Geolocalização, Campanhas de Incentivo, Anúncios e Vendas. Conhecimento dos padrões de desenvolvimento e ferramentas do Android. Experiência com desenvolvimento Java e Kotlin. Graduado em Sistemas de Informação pelas <a href="http://www.riobrancofac.edu.br" target="_blank">Faculdades Integradas Rio Branco</a> ecertificado de desenvolvimento do Android Mobile pela  <a href="https://www.caelum.com.br/" target="_blank">Caelum.</a></p>
+                <p class="text-white-50" >Desenvolvedor Android com experiência no desenvolvimento de aplicativos nativos para Instituições Financeiras, Trade Marketing, Geolocalização, Campanhas de Incentivo, Anúncios e Vendas. Conhecimento dos padrões de desenvolvimento e ferramentas do Android. Experiência com desenvolvimento Java e Kotlin. Graduado em Sistemas de Informação pelas <a href="http://www.riobrancofac.edu.br" target="_blank">Faculdades Integradas Rio Branco</a> ecertificado de desenvolvimento do Android Mobile pela  <a href="https://www.caelum.com.br/" target="_blank">Caelum.</a></p>
               </div>
                 <div class="col-lg-8 mx-auto">
                 <h2 class="text-white mb-4">Conhecimentos em Desenvolvimento de Jogos</h2>
@@ -137,6 +137,29 @@
 
 
             <!-- Featured Project Row -->
+
+            <div class="row align-items-left no-gutters mb-4 mb-lg-5">
+
+              <div class="col-xl-4 col-lg-5" >
+                <div class="featured-text text text-lg" >
+                  <h4>Bmg Empresas: Conta Digital para o seu negócio</h4>
+                  <p class="text-black-50 mb-0" align="justify"></p>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="row align-items-left no-gutters mb-4 mb-lg-5">
+
+              <div class="col-xl-4 col-lg-5" >
+                <div class="featured-text text text-lg" >
+                  <h4>Win the Market - Heineken México</h4>
+                  <p class="text-black-50 mb-0" align="justify"></p>
+                </div>
+              </div>
+            </div>
+
             <div class="row align-items-left no-gutters mb-4 mb-lg-5">
 
               <div class="col-xl-4 col-lg-5" >
