--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <header class="masthead" style="background-image: url(img/background.png)">
         <div class="container d-flex h-100 align-items-center" >
           <div class="mx-auto text-center">
-            <a href="portugues/" class="btn btn-primary js-scroll-trigger">Português</a>
-            <a href="ingles/" class="btn btn-primary js-scroll-trigger">English</a>
+            <a href="portugues/index.html" class="btn btn-primary js-scroll-trigger">Português</a>
+            <a href="ingles/index.html" class="btn btn-primary js-scroll-trigger">English</a>
           </div>
         </div>
       </header>
